<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.carlos.a21632699.mrfox.MyLogin"
    style="@style/loginstlyle">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/titulo"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/subtitle"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idDont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:clickable="true"
        android:text="@string/textoAccount"
        android:textColor="@android:color/background_light" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="17dp"
        android:alpha="0.5"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/idUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/idPasswd"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/idPasswd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/idBTN"
            android:ems="10"
            android:hint="@string/cont"
            android:inputType="textPassword" />

    </LinearLayout>


    <Button
        android:id="@+id/idBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idDont"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginBottom="40dp"
        android:onClick="onClick"
        android:text="@string/sign" />

</RelativeLayout>