<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlos.a21632699.mrfox.MyMain">



    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            <ImageView
                android:id="@+id/ImagenBos"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@drawable/forest"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10sp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/zorro"
                    android:layout_width="80dp"
                    android:layout_height="74dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/foxm" />

                <TextView
                    android:id="@+id/tvFox"
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <Button
                    android:id="@+id/btnUnistall"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/white"
                    android:text="@string/Unistall"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btnUpdate"
                    style="@style/MrFoxTheme"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Update" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textolargo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textMultiLine"
                    android:text="@string/texto" />
            </ScrollView>

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
